--- a/src/login/login.component.scss
+++ b/src/login/login.component.scss
@@ -23,12 +23,14 @@ body{
     padding-bottom: 30px;
     background-color: #f7f7f7;
 }
+
 .middleDiv{
     position: absolute;
-    top: 50%;
+//    top: 50%;
     left: 50%;
     margin-left: -131px;
-    margin-top: -129px;
+//    margin-top: -129px;
+    margin-top: 10%;
     background-color: #ffffff;
     padding: 32px;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
